dropped the mailto

--- a/_data/2022/odissei/faculty.yml
+++ b/_data/2022/odissei/faculty.yml
@@ -21,5 +21,5 @@
 
 - name: Godelieve de Wijer
   image: /assets/images/godelieve_dewijer.jpeg
-  bio: Godelieve de Wijer is a Community Manager at ODISSEI. As a Community Manager, she is responsible for increasing the awareness amongst researchers for ODISSEI and its facilities. This includes organising events, conferences and managing all communication related to ODISSEI. Furthermore, she also works on the promoting and developing the educational side of ODISSEI, including lectures, workshops and the summer school. She is one of the organisers of SICSS-ODISSEI. If you have any questions related to the summer school of ODISSEI, please contact [sicss@odissei-data.nl](mailto:sicss@odissei-data.n)
+  bio: Godelieve de Wijer is a Community Manager at ODISSEI. As a Community Manager, she is responsible for increasing the awareness amongst researchers for ODISSEI and its facilities. This includes organising events, conferences and managing all communication related to ODISSEI. Furthermore, she also works on the promoting and developing the educational side of ODISSEI, including lectures, workshops and the summer school. She is one of the organisers of SICSS-ODISSEI. If you have any questions related to the summer school of ODISSEI, please contact sicss@odissei-data.nl.
   website: http://www.ldetraineeship.nl/over-ons/trainees-2021/bart-de-grood/
