--- a/_data/2022/taiwan/people.yml
+++ b/_data/2022/taiwan/people.yml
@@ -9,12 +9,24 @@ participants:
    - name: Coming soon...
 
 organizers:
-  title: Organizer
+  title: Organizers
   people:
+    - name: "Yu-Hui Chang"
+      image: /assets/images/yuhuiC2022.jpg
+      bio: "Yu-Hui is an assistant professor in the Center for Teacher Education at National Sun Yat-sen University. She is proud to be one of the participants in SICSS Taiwan 2021 to relearn new lenses and approaches in revisiting social science studies. As the Learning Experience Chair of SICSS Taiwan 2022, she is looking forward to encouraging more collaborative fun within interdisciplinary social scientists and data scientists to play with data and respond to social needs. She will be moderating a discord server for fellow learners of computational social science. A personal fun fact is that she is equally as adept at reading minds with her third eye as she is at reading data."
+      website: https://twitter.com/yhuiChang
+    - name: "Tsai-Yen Han"
+      image: /assets/images/TsaiYenHan.jfif
+      bio: "Tsai-Yen receives her Ph.D. from the Department of Sociology at Rutgers University in 2021. She is a postdoctoral research fellow in the National Academy for Educational Research. She is passionate about using computational methods and approaches to study the social sciences. As the Admission Chair of SICSS Taiwan 2022, she is dedicated to building a research community interested in computational social science. Her research utilizes quantitative and qualitative methods and examines gender and inequality in public health, reproduction, and education. Her current research project is to examine the gendered decisions in undergraduate fields of study."
     - name: "Robin Lee"
       image: /assets/images/RobinLee.jpg
       bio: "Robin Lee is a PhD student in Sociology at Princeton University. He is the Lead Organizer of SICSS-Taiwan 2022. He worked in the New York Times and United Health Care in data analytics. He is interested in organizational sociology, technology studies, content moderation, and fairness in machine learning. Robin is passionate about creating communities for newcomers in programming and data science. He is the co-founder of Taiwanese Data Professionals. He began learning violin online during the pandemic. He enjoys hiking and skiing."
       website: https://twitter.com/RobinCRLee
+    - name: "Chung-Pei Pien"
+      image: /assets/images/PienChungPei.jpg
+      bio: "Chung-Pei is an assistant professor in the International College of Innovation. He is the University Partnership Chair of SICSS Taiwan 2022. He received his PhD in Sociology from Texas A&M University. His research areas include science and technology research, energy and sustainable environment, experts and technology politics and interpretable policy analysis. In his former life, he was a journalist."
+      website: https://twitter.com/pienici
+    - name: "Cecilia Liu"
     - name: "Ming-Hung Wang"
       image: /assets/images/MingHungWang.jpg
       bio: "Ming-Hung Wang is an assistant professor in the Department of Computer Science and Information Engineering of National Chung Cheng University, Taiwan. He is the Program Chair of SICSS-Taiwan 2022. He received his PhD degree in Electrical Engineering from National Taiwan University in 2017. He is the PI of Digital Society and Security Lab (DIGI-SSL). The group uses data science and computational methodology to investigate issues related to computational social science and network security. Currently, his team is working on integrating statistical learning, graph theory, and data visualization to understand information dissemination and information operation on large-scale social media platforms (Facebook, PTT, Instagram, Tiktok, etc.). Their daily works include analyzing the source of the dis/misinformation, identifying malicious accounts/sockpuppets, and exploring various social media security issues.In his free time, he loves playing guitar. His favorite bands are 伍佰 & China Blue and Oasis. He is a loyal baseball fan although he can only pitch at 100km/h."
