--- a/_data/2022/taiwan/people.yml
+++ b/_data/2022/taiwan/people.yml
@@ -16,7 +16,7 @@ organizers:
       bio: "Yu-Hui is an assistant professor in the Center for Teacher Education at National Sun Yat-sen University. She is proud to be one of the participants in SICSS Taiwan 2021 to relearn new lenses and approaches in revisiting social science studies. As the Learning Experience Chair of SICSS Taiwan 2022, she is looking forward to encouraging more collaborative fun within interdisciplinary social scientists and data scientists to play with data and respond to social needs. She will be moderating a discord server for fellow learners of computational social science. A personal fun fact is that she is equally as adept at reading minds with her third eye as she is at reading data."
       website: https://twitter.com/yhuiChang
     - name: "Tsai-Yen Han"
-      image: /assets/images/TsaiYenHan.jfif
+      image: /assets/images/TsaiYenHan.jpeg
       bio: "Tsai-Yen receives her Ph.D. from the Department of Sociology at Rutgers University in 2021. She is a postdoctoral research fellow in the National Academy for Educational Research. She is passionate about using computational methods and approaches to study the social sciences. As the Admission Chair of SICSS Taiwan 2022, she is dedicated to building a research community interested in computational social science. Her research utilizes quantitative and qualitative methods and examines gender and inequality in public health, reproduction, and education. Her current research project is to examine the gendered decisions in undergraduate fields of study."
     - name: "Robin Lee"
       image: /assets/images/RobinLee.jpg
@@ -27,7 +27,7 @@ organizers:
       bio: "Chung-Pei is an assistant professor in the International College of Innovation. He is the University Partnership Chair of SICSS Taiwan 2022. He received his PhD in Sociology from Texas A&M University. His research areas include science and technology research, energy and sustainable environment, experts and technology politics and interpretable policy analysis. In his former life, he was a journalist."
       website: https://twitter.com/pienici
     - name: "Cecilia Liu"
-      image: /assets/images/CeciliaLiu.jpg
+      image: /assets/images/CeciliaLiu.jpeg
       bio: "Cecilia Liu is the Chief of Staff and Finance Chair of SICSS-Taiwan 2022. She received her Juris Doctor degree from University of Pennsylvania Law School in 2015. In her previous life, she was a transactional lawyer in New York and Taipei for more than ten years. She is interested in the issues of gender inequality in STEM fields and passionate about encouraging more girls and women to join the tech space. She began practicing horseback riding and tennis after moving to the States (never too late!) and has been enjoying the hobbies a lot during the pandemic. Fun fact about her: she is an avid cook and was once responsible for daily meals of a team of 40 volunteers in Chimei island of Penghu while doing community outreach."
       website: https://www.linkedin.com/in/pcecilialiu/
     - name: "Ming-Hung Wang"
