--- a/_data/2022/taiwan/people.yml
+++ b/_data/2022/taiwan/people.yml
@@ -16,7 +16,7 @@ organizers:
       bio: "Yu-Hui is an assistant professor in the Center for Teacher Education at National Sun Yat-sen University. She is proud to be one of the participants in SICSS Taiwan 2021 to relearn new lenses and approaches in revisiting social science studies. As the Learning Experience Chair of SICSS Taiwan 2022, she is looking forward to encouraging more collaborative fun within interdisciplinary social scientists and data scientists to play with data and respond to social needs. She will be moderating a discord server for fellow learners of computational social science. A personal fun fact is that she is equally as adept at reading minds with her third eye as she is at reading data."
       website: https://twitter.com/yhuiChang
     - name: "Tsai-Yen Han"
-      image: /assets/images/TsaiYenHan.jpeg
+      image: /assets/images/TsaiYenHan.jpg
       bio: "Tsai-Yen receives her Ph.D. from the Department of Sociology at Rutgers University in 2021. She is a postdoctoral research fellow in the National Academy for Educational Research. She is passionate about using computational methods and approaches to study the social sciences. As the Admission Chair of SICSS Taiwan 2022, she is dedicated to building a research community interested in computational social science. Her research utilizes quantitative and qualitative methods and examines gender and inequality in public health, reproduction, and education. Her current research project is to examine the gendered decisions in undergraduate fields of study."
     - name: "Robin Lee"
       image: /assets/images/RobinLee.jpg
