--- a/_data/2022/rochester/schedule.yml
+++ b/_data/2022/rochester/schedule.yml
@@ -1,3 +1,3 @@
-- date: May, 2022
+- date: "May 9-20, 2022"
   events:
     - name: "You can find the schedule for the summer school [here](https://docs.google.com/spreadsheets/d/1Md4EkvWL1XD_hl84A4-zmOzHdyGC5dmFPVtIP7p9nvw/edit?usp=sharing)."
