singapore speakers update

--- a/_data/2022/singapore/speakers.yml
+++ b/_data/2022/singapore/speakers.yml
@@ -1,3 +1,9 @@
+- name: Sandra González-Bailón
+  image: /assets/images/sgb.jpg
+  bio: "Dr. Sandra González-Bailón is an Associate Professor at the Annenberg School for Communication, and affiliated faculty at the Warren Center for Network and Data Sciences. Her research lies at the intersection of network science, data mining, computational tools, and political communication. Her applied research looks at how online networks shape exposure to information, with implications for how we think about political engagement, mobilization dynamics, information diffusion, and news consumption.  Her articles have appeared in journals like PNAS, Nature, Science, Political Communication, The Journal of Communication, and Social Networks, among others. She is the author of the book Decoding the Social World (MIT Press, 2017) and co-editor of The Oxford Handbook of Networked Communication (OUP, 2020). She serves as Associate Editor for the journals Social Networks, EPJ Data Science, and The International Journal of Press/Politics, and she is a member of the Board of Reviewing Editors for Science. She leads the research group DiMeNet (/daɪmnet/) — acronym for Digital Media, Networks, and Political Communication."
+  website: https://sandragonzalezbailon.net/
+
+
 - name: Kokil Jaidka
   image: /assets/images/jaidka.jpg
   bio: "Dr. Kokil Jaidka is an Assistant Professor in Computational Communication at the National University of Singapore. Her research interests lie in developing computational models of persuasive and argumentative language and building social media platforms that better facilitate constructive conversations. Her research has been published in Nature Human Behaviour, Journal of Computer-Mediated Communication, and Journal of Communication, among other venues."
