--- a/_data/2022/sydney/faculty.yml
+++ b/_data/2022/sydney/faculty.yml
@@ -1,6 +1,6 @@
 - name: Olga Boichak
   image: /assets/images/Boichak.jpg
-  bio: Olga Boichak is a Lecturer in Digital Cultures at the University of Sydney. She is a media sociologist with expertise in computational social science. Before joining the University of Sydney in 2019, Olga was a research associate at the Center for Computational and Data Sciences (Syracuse University, USA) and a visiting scholar at the Social Media Lab (Ryerson University, Canada). Together with colleagues she developed tools and analytic techniques that support social listening, information literacy, bot detection, and decision-making in complex scenarios. 
+  bio: Dr Olga Boichak is a Lecturer in Digital Cultures at the University of Sydney. She is a media sociologist with expertise in computational social science. Before joining the University of Sydney in 2019, Olga was a research associate at the Center for Computational and Data Sciences (Syracuse University, USA) and a visiting scholar at the Social Media Lab (Ryerson University, Canada). Together with colleagues she developed tools and analytic techniques that support social listening, information literacy, bot detection, and decision-making in complex scenarios. 
   website: http://olgarithmic.net
 
 - name: Eduardo Altmann
@@ -10,5 +10,5 @@
 
 - name: Tristram Alexander
   image: /assets/images/TAlexander.jpeg
-  bio: Tristram Alexander is a Senior Lecturer in Physics at the University of Sydney. He is a physicist with expertise in the modelling of nonlinear dynamical systems with many interacting elements, including social media dynamics. He has developed a suite of processing tools to identify and analyse communities in Twitter stream data.
+  bio: Tristram Alexander is an Associate Professor in Physics at the University of Sydney. He is a physicist with expertise in the modelling of nonlinear dynamical systems with many interacting elements, including social media dynamics. He has developed a suite of processing tools to identify and analyse communities in Twitter stream data.
   website: https://www.sydney.edu.au/science/about/our-people/academic-staff/tristram-alexander.html
