--- a/_data/2022/aachen-graz/speakers.yml
+++ b/_data/2022/aachen-graz/speakers.yml
@@ -1,1 +1,7 @@
-- name:
+- name: "Alina Arseniev-Koehler"
+  image: /assets/images/alina_arseniev_koehler.jpg
+  bio: "Alina Arseniev-Koehler is a computational and cultural sociologist with substantive interests in language, health, and social categories. Alina strives to clarify core concepts and debates about cultural meaning in sociology, such as how humans process meanings in their cultural environment and how widely-shared meanings are encoded in language. Alina's empirical work focuses on cases where meaning is linked to stigma and inequality, such as the moralization of body weight and disease."
+  
+- name: Chris Bail
+  image: /assets/images/chris2019.jpg
+  bio: "Chris Bail is Co-Founder of SICSS and Professor of Sociology and Public Policy at Duke University where he directs the Polarization Lab. He is also affiliated with the Interdisciplinary Data Science Program, the Duke Network Analysis Center, and serves on the Advisory Council of the National Science Foundation's SBE Directorate. His research examines political polarization, culture and social psychology using tools from the field of computational social science. He is the author of Breaking the Social Media Prism: How to Make our Platforms Less Polarizing."
