--- a/_data/2022/roma-tor-vergata/teaching_assistants.yml
+++ b/_data/2022/roma-tor-vergata/teaching_assistants.yml
@@ -1,2 +1,4 @@
 - name: Alessio Huma
+  bio: Tech Enthusiast, Alessio Huma is a Global Governance undergraduate at the University of Rome Tor Vergata.
 - name: Niranjan Nair Reghuvaran
+  bio: Niranjan Nair Reghuvaran, commonly known as Pachu, is a Global Governance undergraduate at the University of Rome Tor Vergata.
