--- a/_data/2022/roma-tor-vergata/faculty.yml
+++ b/_data/2022/roma-tor-vergata/faculty.yml
@@ -7,6 +7,6 @@
   bio: Simone Borra is associate professor of Statistics in the Economics Department of University of Rome Tor Vergata. He teaches graduate courses in Business Statistics, Business Intelligence & Data Mining, and Statistical methods for management. Simone is the coordinator of a one year post graduate Master in Customer Experience, Statistics, Machine Learning & Artificial Intelligence with the partnership of SAS Institute and Accenture. His main research interests are in Statistical methods for Machine Learning and Nonparametric methods to measure prediction error.
   website:
 - name: Laura Brandimarte
-  image:
+  image: /assets/images/brandimarte-laura.jpeg
   bio: Laura Brandimarte is an Assistant Professor of Management Information Systems at the University of Arizona. She obtained her Master of Science in Economics at the London School of Economics and her PhD in Public Policy and Management, with a specialization in Behavioral Sciences, at Carnegie Mellon University, where she continued her academic career as a Post-doctoral Fellow. Her research and teaching interests focus on behavioral aspects of privacy and security decision making, privacy as self-determination, algorithmic bias, and disinformation. Her work was published in several leading academic journals, including Science, the Journal of Consumer Psychology, the Journal of Experimental Psychology - General, and the ACM Computing Surveys.
-  website:
+  website: laurabrandimarte.com
