updating jias overview page, jias page on locations and updating the people page.

--- a/_data/2022/jias/hero.yml
+++ b/_data/2022/jias/hero.yml
@@ -1,2 +1,2 @@
-header_2: "June 20 to July 8, 2022 | JIAS"
-location: "SICSS-JIAS"
+header_2: "20 June to 8 July, 2022 | JIAS/IPATC"
+location: "SICSS-JIAS/IPATC"
