added suhem parack

--- a/_data/2022/duke/speakers.yml
+++ b/_data/2022/duke/speakers.yml
@@ -1,1 +1,4 @@
-- name:
+- name: "Suhem Parack"
+  image: /assets/images/parack2022.jpeg
+  bio: "Suhem Parack is a Staff Developer Advocate at Twitter. He helps students and academic researchers with their research using the Twitter API. Before joining Twitter, he was a Solutions Architect at Amazon."
+  website: https://twitter.com/suhemparack?ref_src=twsrc%5egoogle%7Ctwcamp%5eserp%7Ctwgr%5eauthor
