Speakers and schedule update

--- a/_data/2022/aachen-graz/schedule.yml
+++ b/_data/2022/aachen-graz/schedule.yml
@@ -47,17 +47,17 @@
 - date: July 25, 2022
   events:
     - name: "Work on group projects"
-    - name: "16:00 Guest lecture: TBA"
+    - name: "16:00 Guest lecture *by Chris Bail*"
 
 - date: July 26, 2022
   events:
     - name: "Work on group projects"
-    - name: "16:00 Guest lecture: TBA"
+    - name: "16:00 Guest lecture *by Roberta Sinatra*"
 
 - date: July 27, 2022
   events:
     - name: "Work on group projects"
-    - name: "16:00 Guest lecture: TBA"
+    - name: "16:00 Guest lecture *by Alina Arseniev-Koehler*"
 
 - date: July 28, 2022
   events:
