--- a/_data/2022/aachen-graz/speakers.yml
+++ b/_data/2022/aachen-graz/speakers.yml
@@ -2,6 +2,10 @@
   image: /assets/images/alina_arseniev_koehler.jpg
   bio: "Alina Arseniev-Koehler is a computational and cultural sociologist with substantive interests in language, health, and social categories. Alina strives to clarify core concepts and debates about cultural meaning in sociology, such as how humans process meanings in their cultural environment and how widely-shared meanings are encoded in language. Alina's empirical work focuses on cases where meaning is linked to stigma and inequality, such as the moralization of body weight and disease."
 
+- name: Roberta Sinatra
+  image: /assets/images/roberta_sinatra.jpeg
+  bio: "Roberta Sinatra is Associate Professor at ITU Copenhagen, and holds visiting positions at ISI (Turin, Italy) and CSH (Vienna, Austria). She is the coordinator of the NEtwoRks, Data, and Society (NERDS) Research group. Her research is at the forefront of network science, data science, and computational social science."
+
 - name: Suhem Parack
   image: /assets/images/pic_suhem.jpg
   bio: "Suhem Parack is a Staff Developer Advocate at Twitter. He helps students and academic researchers with their research using the Twitter API. Before joining Twitter, he was a Solutions Architect at Amazon."
