--- a/_data/2022/atlanta/teaching_assistants.yml
+++ b/_data/2022/atlanta/teaching_assistants.yml
@@ -1,1 +1,3 @@
-- name:
+- name: "Olga Churkina"
+  image: /assets/images/ATL_Olga_Churkina_pic.png
+  bio: "[Olga Churkina] (https://aysps.gsu.edu/files/2017/09/CV_Churkina_Feb10.pdf) is a Ph.D. candidate in Public Policy jointly at Georgia State University and Georgia Institute of Technology. Her research interests include experimental and quasi-experimental methods for education and labor market policies, microeconomics models of human behavior, and applications of big data. Her background is in Quantitative Economics and she is currently involved in the Smart Cities project as a member of the Data Science and Policy Lab at Georgia Tech. Furthermore, she is working on a prosocial behavior research at GSU ExCEN as well as a labor market field experiment for her dissertation."
