--- a/_data/2022/rutgers/teaching_assistants.yml
+++ b/_data/2022/rutgers/teaching_assistants.yml
@@ -1,1 +1,4 @@
-- name:
+- name: Michael Strawbridge
+  image: /assets/images/Michael_Strawbridge.jpeg
+  bio: "PhD student in political science at Rutgers University."
+  website: https://twitter.com/MjStrawbridge
