--- a/_data/2022/jias/location.yml
+++ b/_data/2022/jias/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/UJ.png
 title: JIAS/IPATC
-subtitle: Johannesburg 
+subtitle: Univeristy of Johannesburg 
 description: "20 June to 8 July, 2022"
 link: jias
 year: 2022
