--- a/_data/2022/oxford/speakers.yml
+++ b/_data/2022/oxford/speakers.yml
@@ -17,6 +17,11 @@
   image: /assets/images/OCleryNeave.jpg
   bio: "Originally from Dublin, Neave is currently Associate Professor at the Centre for Advanced Spatial Analysis (CASA) at University College London. Her group focuses on studying the processes underlying economic development and the emergence of complexity for cities, often using tools from graph theory and network science. She was previously a Senior Research Fellow at the Mathematical Institute at the University of Oxford where she established a new group working at the interface of mathematics, data science and development/urban issues." 
   website: http://neaveoclery.com/
+  
+- name: Carsten Schwemmer
+  image: /assets/images/schwemmer.jpg
+  bio: "Carsten is a Senior Researcher and Team Leader for Designed Digital Data at GESIS, Computational Social Science Department. His research focuses on applying computational methods for ethnic minority & gender studies, digital media, political communication and sociotechnical systems. I am particularly interested in methods related to natural language processing, image recognition and data mining."
+  website: https://www.carstenschwemmer.com/
 
 - name: Andrew Stephen
   image: /assets/images/Andrew_Stephen.jpg
