--- a/_data/2022/penn/people.yml
+++ b/_data/2022/penn/people.yml
@@ -1,3 +1,21 @@
+faculties:
+  title: Faculties
+  people:
+    - name: Xi Song 
+      image: 
+      bio: "Xi Song is an Associate Professor of Sociology and a faculty member of the Graduate Group in Demography at University of Pennsylvania. Her research interests include social stratification and mobility, social inequality, population studies, and quantitative methodology. Her current research examines social, economic, and demographic processes that govern the persistence of inequality across life stages and generations from the 18th century to the present."
+      website: https://sociology.sas.upenn.edu/people/xi-song
+  
+    - name: Daniel Hopkins
+      image: 
+      bio: "Daniel J. Hopkins is a Professor in the University of Pennsylvania's Department of Political Science, and he holds a secondary appointment in the Annenberg School for Communication. His research focuses on political behavior, with special emphasis on American politics, voting, racial and ethnic politics, local politics, and research methods. His research has employed a variety of statistical and computational methods to analyze texts. The author of 47 academic articles and the 2018 book The Increasingly United States: How and Why American Political Behavior Nationalized, Hopkins also regularly writes about American politics for the website FiveThirtyEight.com. Professor Hopkins received his Ph.D. from Harvard University in 2007. He subsequently was a post-doctoral fellow at Yale University and an Assistant and then Associate Professor at Georgetown University."
+      website: www.danhopkins.org
+  
+    - name: Hanming Fang
+      image: 
+      bio: "Hanming Fang is Joseph M. Cohen Term Professor of Economics at the University of Pennsylvania. He is an applied microeconomist with broad theoretical and empirical interests focusing on public economics, including topics such as discrimination, social insurance, and welfare reform, health insurance markets, and population aging."
+      website: https://web.sas.upenn.edu/hfang/
+
 organizers:
   title: Organizers
   people:
@@ -20,4 +38,31 @@ organizers:
       image: 
       bio: "Eugenio is a second-year Ph.D. student in Demography at the University of Pennsylvania. He holds a BSc and a MSc in Economics and Social Sciences from Bocconi University. Before becoming a PhD candidate, he worked as a research assistant at the Netherlands Interdisciplinary Demographic Institute and the Dondena Center for Research on Social Dynamics and Public Policy. His broad research interests include the interactions between population and the environment, migration, the computational social sciences, and inequality. He loves visualizing data and is interested in studying ways in which data visualization can help researchers to communicate more clearly and to reach a wider audience."
       website: https://www.pop.upenn.edu/bio/eugenio-paglino
+
+speakers: 
+  title: Guest Speakers 
+  people:
+    - name: Coming soon...
+
+tas:
+  title: Teaching Assistants
+  people:
+    - name: Tian Yang
+      image: 
+      bio: "Tian Yang is a Ph.D. Candidate at the Annenberg School for Communication at the University of Pennsylvania. He is interested in applying methods in computational social science to study political communication across the globe, especially in China and the US. Particularly, he looks at how today’s high-choice media environment influences the public’s information behaviors. His research employs various approaches, including network analysis, online experiments, natural experiments, etc."
+      website: https://www.asc.upenn.edu/people/graduate-student/tian-yang
   
+    - name: Alejandra Regla-Vargas  
+      image: 
+      bio: "Alejandra Regla-Vargas is a Ph.D. student in Sociology at the University of Pennsylvania. Her broad research interests include digital culture, race/ethnicity, and online social networks."
+      website: https://sociology.sas.upenn.edu/people/regla-vargas
+  
+    - name: Shengchun Huang
+      image: 
+      bio: "Shengchun Huang is a doctoral student at the Annenberg School for Communication at the University of Pennsylvania. She is interested in digital news consumption, algorithm-driven aggregators/platforms, and social effects in the high-choice media environment. She applies a variety of computational methods in research work, including network analysis, Markov chains, word embedding and nlp, etc."
+      website: https://www.asc.upenn.edu/people/graduate-student/shengchun-huang
+  
+    - name: Eugenio Paglino
+      image: 
+      bio: "Eugenio is a second-year Ph.D. student in Demography at the University of Pennsylvania. He holds a BSc and a MSc in Economics and Social Sciences from Bocconi University. Before becoming a PhD candidate, he worked as a research assistant at the Netherlands Interdisciplinary Demographic Institute and the Dondena Center for Research on Social Dynamics and Public Policy. His broad research interests include the interactions between population and the environment, migration, the computational social sciences, and inequality. He loves visualizing data and is interested in studying ways in which data visualization can help researchers to communicate more clearly and to reach a wider audience."
+      website: https://www.pop.upenn.edu/bio/eugenio-paglino
