--- a/_data/2022/penn/faculty.yml
+++ b/_data/2022/penn/faculty.yml
@@ -1,15 +1,1 @@
-- name: Xi Song 
-  image: 
-  bio: "Xi Song is an Associate Professor of Sociology and a faculty member of the Graduate Group in Demography at University of Pennsylvania. Her research interests include social stratification and mobility, social inequality, population studies, and quantitative methodology. Her current research examines social, economic, and demographic processes that govern the persistence of inequality across life stages and generations from the 18th century to the present."
-  website: https://sociology.sas.upenn.edu/people/xi-song
-  
-- name: Daniel Hopkins
-  image: 
-  bio: "Daniel J. Hopkins is a Professor in the University of Pennsylvania's Department of Political Science, and he holds a secondary appointment in the Annenberg School for Communication. His research focuses on political behavior, with special emphasis on American politics, voting, racial and ethnic politics, local politics, and research methods. His research has employed a variety of statistical and computational methods to analyze texts. The author of 47 academic articles and the 2018 book The Increasingly United States: How and Why American Political Behavior Nationalized, Hopkins also regularly writes about American politics for the website FiveThirtyEight.com. Professor Hopkins received his Ph.D. from Harvard University in 2007. He subsequently was a post-doctoral fellow at Yale University and an Assistant and then Associate Professor at Georgetown University."
-  website: www.danhopkins.org
-  
-- name: Hanming Fang
-  image: 
-  bio: "Hanming Fang is Joseph M. Cohen Term Professor of Economics at the University of Pennsylvania. He is an applied microeconomist with broad theoretical and empirical interests focusing on public economics, including topics such as discrimination, social insurance, and welfare reform, health insurance markets, and population aging."
-  website: https://web.sas.upenn.edu/hfang/
-
+- name: 
