--- a/_data/2022/penn/teaching_assistants.yml
+++ b/_data/2022/penn/teaching_assistants.yml
@@ -1,21 +1,1 @@
-- name: Tian Yang
-  image: 
-  bio: "Tian Yang is a Ph.D. Candidate at the Annenberg School for Communication at the University of Pennsylvania. He is interested in applying methods in computational social science to study political communication across the globe, especially in China and the US. Particularly, he looks at how today’s high-choice media environment influences the public’s information behaviors. His research employs various approaches, including network analysis, online experiments, natural experiments, etc."
-  website: https://www.asc.upenn.edu/people/graduate-student/tian-yang
-  
-- name: Alejandra Regla-Vargas  
-  image: 
-  bio: "Alejandra Regla-Vargas is a Ph.D. student in Sociology at the University of Pennsylvania. Her broad research interests include digital culture, race/ethnicity, and online social networks."
-  website: https://sociology.sas.upenn.edu/people/regla-vargas
-  
-- name: Shengchun Huang
-  image: 
-  bio: "Shengchun Huang is a doctoral student at the Annenberg School for Communication at the University of Pennsylvania. She is interested in digital news consumption, algorithm-driven aggregators/platforms, and social effects in the high-choice media environment. She applies a variety of computational methods in research work, including network analysis, Markov chains, word embedding and nlp, etc."
-  website: https://www.asc.upenn.edu/people/graduate-student/shengchun-huang
-  
-- name: Eugenio Paglino
-  image: 
-  bio: "Eugenio is a second-year Ph.D. student in Demography at the University of Pennsylvania. He holds a BSc and a MSc in Economics and Social Sciences from Bocconi University. Before becoming a PhD candidate, he worked as a research assistant at the Netherlands Interdisciplinary Demographic Institute and the Dondena Center for Research on Social Dynamics and Public Policy. His broad research interests include the interactions between population and the environment, migration, the computational social sciences, and inequality. He loves visualizing data and is interested in studying ways in which data visualization can help researchers to communicate more clearly and to reach a wider audience."
-  website: https://www.pop.upenn.edu/bio/eugenio-paglino
-  
-  
+- name: 
