--- a/_data/2022/rutgers/speakers.yml
+++ b/_data/2022/rutgers/speakers.yml
@@ -7,6 +7,16 @@
   bio: "Assistant Professor of Psychology at Rutgers University."
   website: https://www.thehamiltonlab.org/lab-director
 
+- name: Tamar Mitts
+  image: /assets/images/TamarMitts.png
+  bio: "Assistant Professor at the School of International and Public Affairs and a Faculty Member at the Data Science Institute and the Saltzman Institute of War and Peace Studies at Columbia University."
+  website: http://tamarmitts.com/
+
+- name: Gonzalo Rivero
+  image: /assets/images/GonzaloRivero.jpeg
+  bio: "Associate Director of Research at Pew Research Center."
+  website: https://griverorz.net/
+  
 - name: Sarah Shugars
   image: /assets/images/ShugarsSarah.JPG
   bio: "CDS Moore-Sloan Faculty Fellow at NYU’s Center for Data Science."
