--- a/_data/2022/rutgers/teaching_assistants.yml
+++ b/_data/2022/rutgers/teaching_assistants.yml
@@ -1,3 +1,8 @@
+- name: Jeffrey Coltman-Cormier
+  image: /assets/images/Jeffrey_ColtmanCormier.jpeg
+  bio: "PhD student in political science at Rutgers University and a National Science Foundation Graduate Research Fellow."
+  website: https://twitter.com/JeffreyColtCorm 
+  
 - name: Michael Strawbridge
   image: /assets/images/Michael_Strawbridge.jpeg
   bio: "PhD student in political science at Rutgers University."
