--- a/_data/2022/penn/people.yml
+++ b/_data/2022/penn/people.yml
@@ -59,7 +59,7 @@ speakers:
       bio: "Junming Huang is an Associate Research Scientist at the Paul and Marcia Wythes Center on Contemporary China, Princeton University. His research interests lie in causal inference, science of science, statistics analysis and social networks. "
       website: http://www.junminghuang.com/
   
-    - name: Coming soon...
+    - name: More coming soon...
 
 tas:
   title: Teaching Assistants
