--- a/_data/2022/penn/people.yml
+++ b/_data/2022/penn/people.yml
@@ -9,7 +9,7 @@ organizers:
     - name: Daniel Hopkins
       image: /assets/images/penn2022_hopkins_daniel.jpg
       bio: "Daniel J. Hopkins is a Professor in the University of Pennsylvania's Department of Political Science, and he holds a secondary appointment in the Annenberg School for Communication. His research focuses on political behavior, with special emphasis on American politics, voting, racial and ethnic politics, local politics, and research methods. His research has employed a variety of statistical and computational methods to analyze texts. The author of 47 academic articles and the 2018 book The Increasingly United States: How and Why American Political Behavior Nationalized, Hopkins also regularly writes about American politics for the website FiveThirtyEight.com. Professor Hopkins received his Ph.D. from Harvard University in 2007. He subsequently was a post-doctoral fellow at Yale University and an Assistant and then Associate Professor at Georgetown University."
-      website: https://www.danhopkins.org
+      website: https://web.sas.upenn.edu/danhop/
   
     - name: Hanming Fang
       image: /assets/images/penn2022_Hanming Fang.jpg
