--- a/_data/2022/haifa/faculty.yml
+++ b/_data/2022/haifa/faculty.yml
@@ -1,1 +1,19 @@
-- name: 
+- name: Baruch Eitam
+
+
+
+
+- name: Pavel Goldstein
+
+
+
+
+- name: Mor Peleg
+  bio: Mor Peleg is Full Professor of information systems, Chair of the BSc Data Science program and head of the University of Haifa’s Data Science Center, former Chair of the Department of Information Systems. She is Editor-in-Chief of the Journal of Biomedical Informatics, Editorial Board Member of Methods of Information in Medicine and is International Fellow of the American College of Medical Informatics  and Fellow of the International Academy of Health Sciences Informatics. 
+  image: /assets/images/Mor2019-Maysq2.jpg
+  website: https://sites.google.com/hevra.haifa.ac.il/mpeleg
+
+- name: Tali Kristal
+  bio: n my research I work on various dimensions of economic inequality. I explain and demonstrate why and how economic inequality in Israel, the U.S. and other developed societies is related to institutional (e.g., labor unions) and structural (i.e., the linkages among jobs, firms, industries, and occupations) features of labor markets, which create differences in the ways incomes are allocated to individuals.
+  image: /assets/images/Tali_Kristal.jpg
+  website: https://www.talikristal.com
