--- a/_data/2022/haifa/faculty.yml
+++ b/_data/2022/haifa/faculty.yml
@@ -1,12 +1,12 @@
 - name: Baruch Eitam
   bio: 
   image: /assets/images/Baruch_Eitam.jpg
-  website: 
+  website: https://sites.google.com/view/mcl-haifa/home
 
 - name: Pavel Goldstein
-
-
-
+  bio: I have completed , Master in Biostatistics and PhD in pain neuroscience. During my PhD studies, I was exposed to the field of pain research that is still overflowed with endless debates about basic questions: how we measure pain? What causes pain? How we treat pain? Completing graduate studies I found myself at the Prof. Tor Wager’s lab, leading projects with a focus on digital solutions for chronic pain. In 2019 I founded Integrative Pain Laboratory at the University of Haifa to gather novel understanding of chronic pain conditions, developing new ways of measuring, preventing and treating chronic pain.
+  image: /assets/images/Goldstein_pavel.jpg
+  website: https://hw.haifa.ac.il/en/people/sph/pavel-goldstein
 
 - name: Mor Peleg
   bio: Mor Peleg is Full Professor of information systems, Chair of the BSc Data Science program and head of the University of Haifa’s Data Science Center, former Chair of the Department of Information Systems. She is Editor-in-Chief of the Journal of Biomedical Informatics, Editorial Board Member of Methods of Information in Medicine and is International Fellow of the American College of Medical Informatics  and Fellow of the International Academy of Health Sciences Informatics. 
@@ -14,6 +14,6 @@
   website: https://sites.google.com/hevra.haifa.ac.il/mpeleg
 
 - name: Tali Kristal
-  bio: n my research I work on various dimensions of economic inequality. I explain and demonstrate why and how economic inequality in Israel, the U.S. and other developed societies is related to institutional (e.g., labor unions) and structural (i.e., the linkages among jobs, firms, industries, and occupations) features of labor markets, which create differences in the ways incomes are allocated to individuals.
+  bio: Tali Kristal is Professor of Sociology at University of Haifa. The central focus of her research is on how and why positions in the economy such as organizations, industries, occupations, classes, and the relations between them, shape the evolution of economic inequality, and how these vary across time and countries.
   image: /assets/images/Tali_Kristal.jpg
   website: https://www.talikristal.com
