Fix yml error caused by improper colon

--- a/_data/2022/haifa/faculty.yml
+++ b/_data/2022/haifa/faculty.yml
@@ -4,7 +4,7 @@
   website: https://sites.google.com/view/mcl-haifa/home
 
 - name: Pavel Goldstein
-  bio: I have completed , Master in Biostatistics and PhD in pain neuroscience. During my PhD studies, I was exposed to the field of pain research that is still overflowed with endless debates about basic questions: how we measure pain? What causes pain? How we treat pain? Completing graduate studies I found myself at the Prof. Tor Wager’s lab, leading projects with a focus on digital solutions for chronic pain. In 2019 I founded Integrative Pain Laboratory at the University of Haifa to gather novel understanding of chronic pain conditions, developing new ways of measuring, preventing and treating chronic pain.
+  bio: "I have completed , Master in Biostatistics and PhD in pain neuroscience. During my PhD studies, I was exposed to the field of pain research that is still overflowed with endless debates about basic questions: how we measure pain? What causes pain? How we treat pain? Completing graduate studies I found myself at the Prof. Tor Wager’s lab, leading projects with a focus on digital solutions for chronic pain. In 2019 I founded Integrative Pain Laboratory at the University of Haifa to gather novel understanding of chronic pain conditions, developing new ways of measuring, preventing and treating chronic pain."
   image: /assets/images/Goldstein_pavel.jpg
   website: https://hw.haifa.ac.il/en/people/sph/pavel-goldstein
 
