--- a/_data/2022/haifa/schedule.yml
+++ b/_data/2022/haifa/schedule.yml
@@ -31,7 +31,7 @@
   events:
    - name: "09:00 - 12:00 Data management and preprocessing in Python 4: Amit Donner "
    - name: "12:00 - 13:00 Lunch"
-   - name: "13:00 - 15:00 Faculty talks - Dan Feldman and Michael Friedman: Amit Donner"  
+   - name: "13:00 - 15:00 Faculty talks - Dan Feldman and Michael Friedman"  
    - name: "15:00 - 17:00 Elective social event"
       
 - date: Week 2    
